fix: new java futures cause to crush